--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wcd/divriots.orbiting-elements",
+  "name": "@divriots/orbiting-elements",
   "version": "0.0.0",
   "description": "",
   "license": "ISC",
