--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "scripts": {
     "serve": "npx wcd-cli@latest serve K4nq9IUNbvXxLX7C1Z0r --open"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lit": "^2.2.2"
+  },
+  "exports": {
+    ".": "./dist/index.js"
+  }
 }
